--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,8 @@
-<p>hogddddddddde</p>
+<!DOCTYPE html>
+<html>
+  <body>
+    <script>
+        location.replace('page/index.htm');
+    </script>
+  </body>
+</html> 
