--- a/scheme/server_nensu.htm
+++ b/scheme/server_nensu.htm
@@ -1,1 +1,5 @@
-
+<script type="text/javascript">
+    setTimeout(function() {
+        window.location.href = 'minecraft:?addExternalServer=ねんすさーばー|svr1.mcsvr.online:36076';
+    }, 0);
+</script>
