--- a/scheme/server_nensu.htm
+++ b/scheme/server_nensu.htm
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-    setTimeout( function() { window.location.href = 'minecraft:?addExternalServer="ねんすさーばー"|svr1.mcsvr.online:36076'; }, 0 );
+    setTimeout( function() { window.location.href = 'minecraft:?addExternalServer=%E3%81%AD%E3%82%93%E3%81%99%E3%81%95%E3%83%BC%E3%81%B0%E3%83%BC|svr1.mcsvr.online:36076'; }, 0 );
 </script>
